2001-07-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (read): Ensure that only a single image frame is read.

2001-07-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (flattenImages): New function to flatten a
 	layered image.  Still needs documentation.

	* lib/Montage.cpp (Montage): Montage initial defaults are no
 	longer drawn from ImageInfo.  MontageInfo structure is entirely
 	filled out by updateMontageInfo();

2001-07-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Montage.cpp (updateMontageInfo): Bugfix; colors which were
 	intentionally specified as invalid (unset) were being ignored.
  	This produced unattractive label text when doing a montage.

2001-07-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (medianFilterImage): Changed argument from
 	unsigned int to const double.
	(fillColorImage): New method. Still needs documentation
	(strokeColorImage): New method. Still needs documentation
	(isValidImage): New method. Still needs documentation

	* lib/Magick++/Image.h (edge): Change argument from unsigned int to double.
	(medianFilter): Changed argument from unsigned int to const double.

	* lib/Magick++/STL.h (edgeImage): Change argument from unsigned int to double.

	* demo/demo.cpp (main): Updated to match PerlMagick demo.

2001-06-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (shaveImage): New function to shave edges from image.

	* lib/Image.cpp (shave): New method to shave edges from image.

2001-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (quantize): Remove conditions on whether
 	quantization should be done.  Now quantization is always done.

2001-06-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Image.h (blur,charcoal,emboss,sharpen): Changed
 	radius and sigma parameters to match current ImageMagick defaults.

2001-02-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
